Fixed promo code form spacing

--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,7 @@
   text-decoration-line: line-through;
   color: grey;
 }
+
+.promo-form {
+  margin-top: 15px;
+}
